<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="beforeDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgV_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/anchor_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="Title Film" />

    <TextView
        android:id="@+id/txtV_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/txtV_title"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="(0000)" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtV_type"
        app:layout_constraintStart_toEndOf="@+id/txtV_type"
        app:layout_constraintTop_toTopOf="@+id/txtV_type"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/ic_baseline_circle_24_black"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtV_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="Genre Film" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/txtV_genre"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/ic_baseline_circle_24_black" />

    <TextView
        android:id="@+id/txtV_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:text="00h 00m" />

    <TextView
        android:id="@+id/txtV_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Type"
        android:textColor="@color/anchor_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_title" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_type"
        app:srcCompat="@drawable/ic_baseline_stars_24"
        tools:ignore= "ContentDescription" />

    <TextView
        android:id="@+id/txtV_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        tools:text="00%" />

    <LinearLayout
        android:id="@+id/lyt_trailer"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtV_score"
        app:layout_constraintStart_toEndOf="@+id/txtV_score"
        app:layout_constraintTop_toTopOf="@+id/txtV_score">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_play_circle_filled_24"/>

        <TextView
            android:layout_marginLeft="4dp"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/anchor_blue"
            android:text="@string/play_trailer"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/overview"
        android:textColor="@color/anchor_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_date" />

    <TextView
        android:id="@+id/txtV_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@tools:sample/lorem/random"
        android:textAlignment="textStart"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/txtV_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_score"
        tools:text="November 20, 2000" />


</androidx.constraintlayout.widget.ConstraintLayout>